<resources>
  <string name="app_name">Do An Mang Xa Hoi</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="loading">…</string>

  <!--  LOGIN-->
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="username">Username</string>
  <string name="phoneNumber">Phone number</string>
  <string name="login">Login</string>
  <string name="register">Register</string>
  <string name="Remember">Remember</string>
  <string name="doNotHaveAccount">Don\'t have account ? Register</string>
  <string name="haveAccount">Have an account ? Login</string>
  <!--  LOGIN-->
  <string name="WhatOnYourMind">What\'s on your mind?</string>


  <!--  BottomNavigationBarMenuStringValue-->
  <string name="NewFeeds">News Feed</string>
  <string name="Message">Message</string>
  <string name="Friends">Friends</string>
  <string name="Notifications">Notifications</string>
  <string name="Menu">Menu</string>
  <!--  BottomNavigationBarMenuStringValue-->


  <!--  PostCreate-->

  <string name="Post">Post</string>
  <string name="AddHashtag">Add new hashtag</string>
  <string name="HindInputHashtag">Type text and enter to add your hashtag</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <!--  PostCreate-->


  <!--  FriendFragment-->
  <string name="FriendsTabTitle">Friends</string>
  <string name="FriendRequestTabTitle">Request</string>
  <string name="FriendSuggestTabTitle">Suggest</string>
  <string name="HindSearch">Friends Search</string>
  <!--  FriendFragment-->

  <!--  FriendRequestCustomListView-->
  <string name="Accept">Accept</string>
  <string name="Ignore">Ignore</string>
  <!--  FriendRequestCustomListView-->


  <!--  NotificationFragment-->
  <string name="SendFriendRequest">Send you a friend request</string>
  <string name="SendYouMessage">Send you a message</string>
  <!--  NotificationFragment-->

  <!--  MessageFragment-->
  <string name="MessageTitle">Message</string>
  <string name="SentAnImage">Sent an image</string>
  <string name="Me">Me : </string>
  <!--  MessageFragment-->


  <!--  PostContent-->

  <string name="Like">Like</string>
  <string name="Comment">Comment</string>
  <string name="Share">Share</string>
  <!--  PostContent-->

</resources>